--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <div class="About-Me" id="AboutMe">
             <h1>About me</h1>
-            <p class="introduction">Hlw, I am <strong>Nafiz Ahmed</strong>.Studying C.S.E in <strong>American
-                    International University-Bangladesh</strong>.</p>
+            <p class="introduction">
+                Hlw, I am <strong>Nafiz Ahmed</strong>.Studying C.S.E in <strong>American International University-Bangladesh</strong>.</p>
             <p>Hobbies</p>
 
             <ul class="Hobbies">
